--- a/nb/EDA.ipynb
+++ b/nb/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "db0f5b91",
    "metadata": {},
    "outputs": [],
@@ -12,11 +12,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
-=======
-   "execution_count": 16,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
    "id": "2d3ac19b",
    "metadata": {},
    "outputs": [],
@@ -29,251 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-<<<<<<< HEAD
-   "id": "bcdea44c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Species.name</th>\n",
-       "      <th>Realm</th>\n",
-       "      <th>TrophicLevel</th>\n",
-       "      <th>TrophicNiche</th>\n",
-       "      <th>ForagingNiche</th>\n",
-       "      <th>GenbankID</th>\n",
-       "      <th>Taxonomy</th>\n",
-       "      <th>Gene.name</th>\n",
-       "      <th>Gene.start.end.and.trend</th>\n",
-       "      <th>GeneID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GAA</th>\n",
-       "      <th>GAG</th>\n",
-       "      <th>GGT</th>\n",
-       "      <th>GGC</th>\n",
-       "      <th>GGA</th>\n",
-       "      <th>GGG</th>\n",
-       "      <th>TAA</th>\n",
-       "      <th>TAG</th>\n",
-       "      <th>TGA</th>\n",
-       "      <th>temp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Acanthisitta chloris</td>\n",
-       "      <td>Australian</td>\n",
-       "      <td>Carnivore</td>\n",
-       "      <td>Invertivore</td>\n",
-       "      <td>Invertivore bark</td>\n",
-       "      <td>[NC_051004]</td>\n",
-       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
-       "      <td>[ND2]</td>\n",
-       "      <td>[4018:5057](+)</td>\n",
-       "      <td>GeneID:59701857</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Acanthisitta chloris</td>\n",
-       "      <td>Australian</td>\n",
-       "      <td>Carnivore</td>\n",
-       "      <td>Invertivore</td>\n",
-       "      <td>Invertivore bark</td>\n",
-       "      <td>[NC_051004]</td>\n",
-       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
-       "      <td>[ND3]</td>\n",
-       "      <td>[9570:9921](+)</td>\n",
-       "      <td>GeneID:59701878</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Acanthisitta chloris</td>\n",
-       "      <td>Australian</td>\n",
-       "      <td>Carnivore</td>\n",
-       "      <td>Invertivore</td>\n",
-       "      <td>Invertivore bark</td>\n",
-       "      <td>[NC_051004]</td>\n",
-       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
-       "      <td>[ATP8]</td>\n",
-       "      <td>[7876:8044](+)</td>\n",
-       "      <td>GeneID:59701874</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Acanthisitta chloris</td>\n",
-       "      <td>Australian</td>\n",
-       "      <td>Carnivore</td>\n",
-       "      <td>Invertivore</td>\n",
-       "      <td>Invertivore bark</td>\n",
-       "      <td>[NC_051004]</td>\n",
-       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
-       "      <td>[ND1]</td>\n",
-       "      <td>[2822:3800](+)</td>\n",
-       "      <td>GeneID:59701858</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Acanthisitta chloris</td>\n",
-       "      <td>Australian</td>\n",
-       "      <td>Carnivore</td>\n",
-       "      <td>Invertivore</td>\n",
-       "      <td>Invertivore bark</td>\n",
-       "      <td>[NC_051004]</td>\n",
-       "      <td>['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...</td>\n",
-       "      <td>[ND4]</td>\n",
-       "      <td>[10283:11651](+)</td>\n",
-       "      <td>GeneID:59701844</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 99 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Species.name       Realm TrophicLevel TrophicNiche  \\\n",
-       "1  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
-       "2  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
-       "3  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
-       "4  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
-       "5  Acanthisitta chloris  Australian    Carnivore  Invertivore   \n",
-       "\n",
-       "      ForagingNiche    GenbankID  \\\n",
-       "1  Invertivore bark  [NC_051004]   \n",
-       "2  Invertivore bark  [NC_051004]   \n",
-       "3  Invertivore bark  [NC_051004]   \n",
-       "4  Invertivore bark  [NC_051004]   \n",
-       "5  Invertivore bark  [NC_051004]   \n",
-       "\n",
-       "                                            Taxonomy Gene.name  \\\n",
-       "1  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND2]   \n",
-       "2  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND3]   \n",
-       "3  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...    [ATP8]   \n",
-       "4  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND1]   \n",
-       "5  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata...     [ND4]   \n",
-       "\n",
-       "  Gene.start.end.and.trend           GeneID  ... GAA GAG  GGT  GGC GGA  GGG  \\\n",
-       "1           [4018:5057](+)  GeneID:59701857  ...   2   3    0    5   3    3   \n",
-       "2           [9570:9921](+)  GeneID:59701878  ...   4   2    0    4   1    0   \n",
-       "3           [7876:8044](+)  GeneID:59701874  ...   0   0    0    0   0    0   \n",
-       "4           [2822:3800](+)  GeneID:59701858  ...   5   6    0    5   2    6   \n",
-       "5         [10283:11651](+)  GeneID:59701844  ...   7   2    2    9   3    2   \n",
-       "\n",
-       "  TAA  TAG  TGA  temp  \n",
-       "1   0    0    7     1  \n",
-       "2   1    0    4     1  \n",
-       "3   1    0    4     1  \n",
-       "4   0    0    5     1  \n",
-       "5   0    0   11     1  \n",
-       "\n",
-       "[5 rows x 99 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b853dade",
-   "metadata": {},
-   "source": [
-    "camelcase - SpeciesName\n",
-    "\n",
-    "shakecase - species_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56e78352",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-=======
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
    "id": "334cf02e",
    "metadata": {},
    "outputs": [
@@ -577,6 +328,27 @@
    ],
    "source": [
     "df[\"Gene.name\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2e55ac29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Gene.name\"].nunique()"
    ]
   },
   {
@@ -1251,47 +1023,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "df823c7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = df[\"Translated.aminoacids.by.Python\"].str.replace(\"Ю\", \"X\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "d9f3a973",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not any(a.str.contains(\"[ATGCX]+\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "736b8f0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert not any(a.str.contains(\"Ю\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "68855ac6",
    "metadata": {},
@@ -1330,11 +1061,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 46,
-=======
-   "execution_count": 17,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+   "execution_count": 4,
    "id": "a2e55ebc",
    "metadata": {},
    "outputs": [
@@ -1384,11 +1111,7 @@
        "2  Acanthisitta chloris  ['Eukaryota', 'Metazoa', 'Chordata', 'Craniata..."
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 46,
-=======
-     "execution_count": 17,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,11 +1123,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 47,
-=======
-   "execution_count": 18,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+   "execution_count": 5,
    "id": "3cffbf2d",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5298/2798867912.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6515/2220105377.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1422,17 +1141,12 @@
     }
    ],
    "source": [
-    "# string list to tist\n",
     "orders[\"Taxonomy\"] = orders.Taxonomy.apply(eval)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 48,
-=======
-   "execution_count": 19,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+   "execution_count": 6,
    "id": "77c64e09",
    "metadata": {},
    "outputs": [],
@@ -1442,11 +1156,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 49,
-=======
-   "execution_count": 20,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+   "execution_count": 7,
    "id": "c7a747be",
    "metadata": {},
    "outputs": [
@@ -1476,24 +1186,19 @@
        "      dtype=object)"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 49,
-=======
-     "execution_count": 20,
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Passeriformes\n",
-    "orders.Taxonomy.apply(lambda x: x[12:]).head(20).values  "
+    "orders.Taxonomy.apply(lambda x: x[12:]).head(20).values"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "c04c23f2",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "ec6438de",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5298/706906315.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6515/706906315.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1520,64 +1225,13 @@
      ]
     }
    ],
-=======
-   "execution_count": 21,
-   "id": "c04c23f2",
-   "metadata": {},
-   "outputs": [],
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
    "source": [
     "orders[\"Order\"] = orders.Taxonomy.apply(lambda x: x[14])"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "4c6fcee3",
-=======
-   "execution_count": 22,
-   "id": "ec6438de",
->>>>>>> 6a01f0455e97b6a399e6d508e305018d6f5411fc
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "704a9c32",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "2        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "3        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "4        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "5        Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "                               ...                        \n",
-       "10026    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "10027    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "10028    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "10029    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "10030    Eukaryota|Metazoa|Chordata|Craniata|Vertebrata...\n",
-       "Name: Taxonomy, Length: 9958, dtype: object"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "orders.Taxonomy.str.join(\"|\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "8f62eaad",
    "metadata": {},
    "outputs": [
@@ -1709,7 +1363,7 @@
        "[9958 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,41 +1374,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "7160e9ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Passeriformes', 'Accipitriformes', 'Bucerotiformes',\n",
-       "       'Galloanserae', 'Caprimulgimorphae', 'Charadriiformes',\n",
-       "       'Psittaciformes', 'Coraciiformes', 'Gruiformes', 'Pelecaniformes',\n",
-       "       'Sphenisciformes', 'Apterygiformes', 'Strigiformes',\n",
-       "       'Galbuliformes', 'Columbiformes', 'Piciformes', 'Falconiformes',\n",
-       "       'Casuariiformes', 'Cuculiformes', 'Ciconiiformes', 'Coliiformes',\n",
-       "       'Musophagiformes', 'Tinamiformes', 'Procellariiformes',\n",
-       "       'Gaviiformes', 'Phoenicopteriformes', 'Rheiformes', 'Upupiformes',\n",
-       "       'Struthioniformes', 'Podicipediformes', 'Trogoniformes'],\n",
-       "      dtype=object)"
+       "(array(['Passeriformes', 'Accipitriformes', 'Bucerotiformes',\n",
+       "        'Galloanserae', 'Caprimulgimorphae', 'Charadriiformes',\n",
+       "        'Psittaciformes', 'Coraciiformes', 'Gruiformes', 'Pelecaniformes',\n",
+       "        'Sphenisciformes', 'Apterygiformes', 'Strigiformes',\n",
+       "        'Galbuliformes', 'Columbiformes', 'Piciformes', 'Falconiformes',\n",
+       "        'Casuariiformes', 'Cuculiformes', 'Ciconiiformes', 'Coliiformes',\n",
+       "        'Musophagiformes', 'Tinamiformes', 'Procellariiformes',\n",
+       "        'Gaviiformes', 'Phoenicopteriformes', 'Rheiformes', 'Upupiformes',\n",
+       "        'Struthioniformes', 'Podicipediformes', 'Trogoniformes'],\n",
+       "       dtype=object),\n",
+       " 31)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "orders.Order.unique()"
+    "orders.Order.unique(), orders.Order.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9303da45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Passeriformes          4810\n",
+       "Galloanserae           1157\n",
+       "Psittaciformes          533\n",
+       "Charadriiformes         494\n",
+       "Gruiformes              364\n",
+       "Pelecaniformes          338\n",
+       "Caprimulgimorphae       247\n",
+       "Accipitriformes         234\n",
+       "Columbiformes           234\n",
+       "Piciformes              195\n",
+       "Falconiformes           182\n",
+       "Sphenisciformes         156\n",
+       "Coraciiformes           156\n",
+       "Strigiformes            143\n",
+       "Tinamiformes            130\n",
+       "Procellariiformes       117\n",
+       "Cuculiformes             91\n",
+       "Bucerotiformes           65\n",
+       "Ciconiiformes            52\n",
+       "Gaviiformes              26\n",
+       "Podicipediformes         26\n",
+       "Upupiformes              26\n",
+       "Rheiformes               26\n",
+       "Phoenicopteriformes      26\n",
+       "Coliiformes              26\n",
+       "Casuariiformes           26\n",
+       "Trogoniformes            26\n",
+       "Musophagiformes          13\n",
+       "Apterygiformes           13\n",
+       "Struthioniformes         13\n",
+       "Galbuliformes            13\n",
+       "Name: Order, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.Order.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1789,7 +1488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
