update figures and extend to ratio func

--- a/nb/mut_extraction.ipynb
+++ b/nb/mut_extraction.ipynb
@@ -674,7 +674,8 @@
     "        assert c in mutspec, f\"Column {c} is not in mutspec dataframe\"\n",
     "    \n",
     "    shares = mutspec[mutspec.Mut == sbs][cols]\n",
-    "    shares.to_csv(filename, \"\\t\", index=None)\n"
+    "    shares.to_csv(filename, \"\\t\", index=None)\n",
+    "    return shares\n"
    ]
   },
   {
@@ -718,356 +719,6 @@
    "source": [
     "edge_mutspec_ff[edge_mutspec_ff.Mut == \"A>G\"][\"MutSpec\"].hist()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for n1 in \"ACGT\":\n",
-    "    for n2 in \"ACGT\":\n",
-    "        if n1 == n2:\n",
-    "            continue\n",
-    "\n",
-    "        sbs = f\"{n1}>{n2}\"\n",
-    "        prepare_one_mut_share_file(edge_mutspec_ff, f\"../data/processed/sbs_on_tree/{sbs}_edge_mutspec.tsv\", sbs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Node</th>\n",
-       "      <th>Part</th>\n",
-       "      <th>Site</th>\n",
-       "      <th>State</th>\n",
-       "      <th>p_A</th>\n",
-       "      <th>p_C</th>\n",
-       "      <th>p_G</th>\n",
-       "      <th>p_T</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6516</th>\n",
-       "      <td>Acanthocheilonema_viteae</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6517</th>\n",
-       "      <td>Acanthocheilonema_viteae</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6518</th>\n",
-       "      <td>Acanthocheilonema_viteae</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6519</th>\n",
-       "      <td>Acanthocheilonema_viteae</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6520</th>\n",
-       "      <td>Acanthocheilonema_viteae</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241404</th>\n",
-       "      <td>Wuchereria_bancrofti</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2936</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241405</th>\n",
-       "      <td>Wuchereria_bancrofti</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2937</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241406</th>\n",
-       "      <td>Wuchereria_bancrofti</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2938</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241407</th>\n",
-       "      <td>Wuchereria_bancrofti</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2939</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1241408</th>\n",
-       "      <td>Wuchereria_bancrofti</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2940</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2866578 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             Node  Part  Site State  p_A  p_C  p_G  p_T\n",
-       "6516     Acanthocheilonema_viteae     1     1     A  1.0  0.0  0.0  0.0\n",
-       "6517     Acanthocheilonema_viteae     1     2     T  0.0  0.0  0.0  1.0\n",
-       "6518     Acanthocheilonema_viteae     1     3     T  0.0  0.0  0.0  1.0\n",
-       "6519     Acanthocheilonema_viteae     1     4     T  0.0  0.0  0.0  1.0\n",
-       "6520     Acanthocheilonema_viteae     1     5     T  0.0  0.0  0.0  1.0\n",
-       "...                           ...   ...   ...   ...  ...  ...  ...  ...\n",
-       "1241404      Wuchereria_bancrofti     5  2936     T  0.0  0.0  0.0  1.0\n",
-       "1241405      Wuchereria_bancrofti     5  2937     T  0.0  0.0  0.0  1.0\n",
-       "1241406      Wuchereria_bancrofti     5  2938     T  0.0  0.0  0.0  1.0\n",
-       "1241407      Wuchereria_bancrofti     5  2939     T  0.0  0.0  0.0  1.0\n",
-       "1241408      Wuchereria_bancrofti     5  2940     T  0.0  0.0  0.0  1.0\n",
-       "\n",
-       "[2866578 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "states"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prepare files for trees with T-shares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all sites\n",
-    "one_genome = states[states.Node == states.Node.values[0]].reset_index(drop=True)\n",
-    "aln_len = one_genome.shape[0]\n",
-    "share_of_T = states.groupby(\"Node\").p_T.sum() / aln_len\n",
-    "share_of_T = share_of_T.reset_index().reset_index()\n",
-    "share_of_T.columns = [\"Nothing\", \"Node\", \"PrT\"]\n",
-    "share_of_T.to_csv(\"../data/processed/percent_of_T.tsv\", sep=\"\\t\", index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36 {'CGG', 'ACC', 'TCA', 'CCG', 'GGG', 'AGA', 'ACT', 'TCT', 'AGG', 'CGC', 'GTA', 'GCA', 'GTC', 'ACG', 'GGA', 'GGT', 'TCG', 'CTG', 'GCT', 'GTT', 'CTT', 'CCC', 'GCC', 'ACA', 'CCA', 'CTC', 'CTA', 'GGC', 'AGC', 'CGT', 'AGT', 'TCC', 'GCG', 'CGA', 'CCT', 'GTG'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# fourfold sites\n",
-    "ff_states = ...\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append(\"/home/kpotoh/birds/ff_codonsscripts\")\n",
-    "\n",
-    "from utils import extract_ff_codons\n",
-    "\n",
-    "\n",
-    "ff_codons = extract_ff_codons(5)\n",
-    "print(len(ff_codons), ff_codons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "codons = []\n",
-    "codon = \"\"\n",
-    "for i, st in enumerate(states.State.values, 1):\n",
-    "    codon += st\n",
-    "    if i % 3 == 0:\n",
-    "        for _ in range(3):\n",
-    "            codons.append(codon)\n",
-    "        codon = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "states[\"Codon\"] = codons\n",
-    "states[\"NucInCodon\"] = (states.Site - 1) % 3 + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(330147, 10)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ff_states = states[states.NucInCodon == 3]\n",
-    "ff_states = ff_states[ff_states.Codon.isin(ff_codons)]\n",
-    "ff_states.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "one_genome_ff = ff_states[ff_states.Node == ff_states.Node.values[0]].reset_index(drop=True)\n",
-    "aln_len_ff = one_genome_ff.shape[0]\n",
-    "\n",
-    "share_of_T_ff = ff_states.groupby(\"Node\").p_T.sum() / aln_len_ff\n",
-    "share_of_T_ff = share_of_T_ff.reset_index().reset_index()\n",
-    "share_of_T_ff.columns = [\"Nothing\", \"Node\", \"PrT\"]\n",
-    "share_of_T_ff.to_csv(\"../data/processed/percent_of_T_ff.tsv\", sep=\"\\t\", index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
