run script update

--- a/nb/mut_extraction_birds.ipynb
+++ b/nb/mut_extraction_birds.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,6 +104,38 @@
     "    \"p_T\":  np.float32\n",
     "}\n",
     "anc = pd.read_csv(path_to_states, sep=\"\\t\", comment='#', dtype=adtype)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Node\n",
+       "Node1      11325\n",
+       "Node10     11325\n",
+       "Node100    11325\n",
+       "Node101    11325\n",
+       "Node102    11325\n",
+       "           ...  \n",
+       "Node95     11325\n",
+       "Node96     11325\n",
+       "Node97     11325\n",
+       "Node98     11325\n",
+       "Node99     11325\n",
+       "Length: 762, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anc.groupby(\"Node\").apply(len)"
    ]
   },
   {
