--- a/nb/mut_extraction_birds.ipynb
+++ b/nb/mut_extraction_birds.ipynb
@@ -24,6 +24,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rt_states = pd.read_csv(\"../data/interim/_leaves_states_birds_ref.tsv\", sep=\"\\t\")\n",
+    "rt_states = pd.read_csv(\"../data/interim/leaves_states_birds.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Node</th>\n",
+       "      <th>Part</th>\n",
+       "      <th>Site</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acanthisitta_chloris</td>\n",
+       "      <td>1</td>\n",
+       "      <td>705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Acanthisitta_chloris</td>\n",
+       "      <td>2</td>\n",
+       "      <td>204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Acanthisitta_chloris</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Acanthisitta_chloris</td>\n",
+       "      <td>4</td>\n",
+       "      <td>708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Acanthisitta_chloris</td>\n",
+       "      <td>5</td>\n",
+       "      <td>789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9161</th>\n",
+       "      <td>Zosterops_poliogastrus</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9162</th>\n",
+       "      <td>Zosterops_poliogastrus</td>\n",
+       "      <td>9</td>\n",
+       "      <td>375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9163</th>\n",
+       "      <td>Zosterops_poliogastrus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9164</th>\n",
+       "      <td>Zosterops_poliogastrus</td>\n",
+       "      <td>11</td>\n",
+       "      <td>294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9165</th>\n",
+       "      <td>Zosterops_poliogastrus</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1920</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9166 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Node  Part  Site\n",
+       "0       Acanthisitta_chloris     1   705\n",
+       "1       Acanthisitta_chloris     2   204\n",
+       "2       Acanthisitta_chloris     3  1569\n",
+       "3       Acanthisitta_chloris     4   708\n",
+       "4       Acanthisitta_chloris     5   789\n",
+       "...                      ...   ...   ...\n",
+       "9161  Zosterops_poliogastrus     8  1065\n",
+       "9162  Zosterops_poliogastrus     9   375\n",
+       "9163  Zosterops_poliogastrus    10  1503\n",
+       "9164  Zosterops_poliogastrus    11   294\n",
+       "9165  Zosterops_poliogastrus    12  1920\n",
+       "\n",
+       "[9166 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rt_states.groupby([\"Node\", \"Part\"]).Site.max().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = rt_states.groupby([\"Node\", \"Part\"]).Site.max().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 705,  204, 1569, ..., 1503,  294, 1920])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 9166 into shape (12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/mr/birds/nb/mut_extraction_birds.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mr/birds/nb/mut_extraction_birds.ipynb#ch0000037?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39munique(v\u001b[39m.\u001b[39;49mreshape(\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m12\u001b[39;49m), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 9166 into shape (12)"
+     ]
+    }
+   ],
+   "source": [
+    "np.unique(v.reshape(-1, 12), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
